--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,7 @@
   <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
 </head>
 <body>    
-  <div id="content"></div>
-  <!-- <script type="text/babel"> -->
-    <script type="text/babel">
-    const element = (
-        <div title="Outer div">
-            <h1>Hello World!</h1>
-        </div>
-    );
-    ReactDOM.render(element, document.getElementById('content'));
-  </script>
+  <div id="contents"></div>
+  <script type="text/babel" src="/App.jsx"></script>    
 </body>
 </html>
