--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>    
   <div id="contents"></div>
+
+  <script src="/env.js"></script>
   <script src="/App.js"></script>
 </body>
 </html>
