--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -13,7 +13,7 @@
   <div id="contents"></div>
 
   <script src="/env.js"></script>
-  <script src="/vendor.bundle.js"></script>
+  <script src="/vendor.app.bundle.js"></script>
   <script src="/app.bundle.js"></script>
 </body>
 </html>
